# BV-format-compatibility

./: README.md
Fiji-BVdata/: requirements.txt  script.py
napari-BVdata/: script.py  setup.cfg
napari-BVdata/napari_BVdata/: _writer.py  interface.py  napari.yaml  plugins.py  utils.py
napari-BVdata/napari_BVdata/BVMoudle/: BVMoudle.pyd  BVMoudle.pyi  __init__.py
napari-BVdata/napari_BVdata/code_plugins/: cl_plugin_review.py  plugin_base.py
