[metadata]
name = napari-BVdata
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari[all]>=0.4.14
    QtPy
    matplotlib>=3.4.1
    numpy	

[options.entry_points]
napari.manifest =
    napari-BVdata = napari_BVdata:napari.yaml
	